Add the steps of the recipe to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -23,5 +23,18 @@
             Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed 
             ingredient list and step-by-step instructions in the recipe below.
         </p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li>Meat</li>
+            <li>Onion and garlic</li>
+            <li>Tomato products</li>
+            <li>Sugar</li>
+            <li>Spices and seasonings</li>
+            <li>Lasagna noodles</li>
+            <li>Cheeses</li>
+            <li>Egg</li>
+        </ul>
     </body>
 </html> 
