--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -36,5 +36,16 @@
             <li>Cheeses</li>
             <li>Egg</li>
         </ul>
+
+        <h2>Steps</h2>
+
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     </body>
 </html> 
