Add descriptions for pizza.html and hamburger.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,5 +11,17 @@
         <img src="https://hips.hearstapps.com/hmg-prod/images/classic-cheese-pizza-recipe-2-64429a0cb408b.jpg?crop=0.8888888888888888xw:1xh;center,top&resize=1200:*" 
         alt="Delicious pizza">
 
+        <h2>Description</h2>
+
+        <p>
+            Pizza on the grill is a fantastic way to make pizza at home. The heat of a hot grill is a perfect match 
+            for a professional pizza oven. Learn the tricks for making and grilling pizza from scratch with this 
+            recipe. Feel free to use your favorite toppings, but keep in mind not to overload the pizza.
+        </p>
+        
+        <p>
+            No pizza oven? No problem! Make your homemade pizza on the grill for that classic smoky, wood fire 
+            oven flavor. 
+        </p>
     </body>
 </html> 
