--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -21,5 +21,24 @@
         <p>
             Serve on buns with your favorite condiments.
         </p>
+
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li>1 ½ pounds lean ground beef</li>
+            <li>½ onion, finely chopped</li>
+            <li>½ cup shredded Colby Jack or Cheddar cheese</li>
+            <li>1 egg</li>
+            <li>1 (1 ounce) envelope dry onion soup mix</li>
+            <li>1 clove garlic, minced</li>
+            <li>1 tablespoon garlic powder</li>
+            <li>1 teaspoon soy sauce</li>
+            <li>1 teaspoon Worcestershire sauce</li>
+            <li>1 teaspoon dried parsley</li>
+            <li>1 teaspoon dried basil</li>
+            <li>1 teaspoon dried oregano</li>
+            <li>½ teaspoon crushed dried rosemary</li>
+            <li>salt and pepper to taste</li>
+        </ul>
     </body>
 </html> 
