--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="hamburger.css">
         <title>Hamburger</title>
     </head>
 
