Make font size larger in all files

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -14,13 +14,13 @@
 
         <h2>Description</h2>
 
-        <p>
+        <p class="large-font">
             Pizza on the grill is a fantastic way to make pizza at home. The heat of a hot grill is a perfect match 
             for a professional pizza oven. Learn the tricks for making and grilling pizza from scratch with this 
             recipe. Feel free to use your favorite toppings, but keep in mind not to overload the pizza.
         </p>
         
-        <p>
+        <p class="large-font">
             No pizza oven? No problem! Make your homemade pizza on the grill for that classic smoky, wood fire 
             oven flavor. 
         </p>
@@ -29,7 +29,7 @@
 
         <h3>Pizza Dough</h3>
 
-        <ul>
+        <ul class="large-font">
             <li>1 cup warm water (110 degrees F/45 degrees C)</li>
             <li>1 (.25 ounce) package active dry yeast</li>
             <li>1 pinch white sugar</li>
@@ -42,13 +42,13 @@
 
         <h3>Garlic Oil</h3>
 
-        <ul>
+        <ul class="large-font">
             <li>½ cup olive oil</li>
             <li>1 teaspoon minced garlic</li>
         </ul>
 
         <h3>Pizza Toppings</h3>
-        <ul>
+        <ul class="large-font">
             <li>¼ cup tomato sauce, divided</li>
             <li>1 cup chopped tomatoes, divided</li>
             <li>¼ cup sliced black olives, divided</li>
@@ -58,7 +58,7 @@
         </ul>
 
         <h2>Steps</h2>
-        <ol>
+        <ol class="large-font">
             <li>Gather all ingredients.</li>
             <li>
                 Make dough: Pour warm water into a large bowl; dissolve yeast and sugar in warm water. 
