--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -14,18 +14,18 @@
 
         <h2>Description</h2>
 
-        <p>
+        <p class="large-font">
             The best burger recipe for summertime grilling! This juicy burger is jam-packed with all kinds of 
             stuff and has no tasteless bread crumbs.
         </p>
             
-        <p>
+        <p class="large-font">
             Serve on buns with your favorite condiments.
         </p>
 
         <h2>Ingredients</h2>
 
-        <ul>
+        <ul class="large-font">
             <li>1 ½ pounds lean ground beef</li>
             <li>½ onion, finely chopped</li>
             <li>½ cup shredded Colby Jack or Cheddar cheese</li>
@@ -44,7 +44,7 @@
 
         <h2>Steps</h2>
 
-        <ol>
+        <ol class="large-font">
             <li>Preheat an outdoor grill for high heat and lightly oil the grate.</li>
             <li>
                 Meanwhile, combine ground beef, onion, cheese, egg, onion soup mix, minced garlic, garlic 
