--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,21 +13,21 @@
 
         <h2>Description</h2>
 
-        <p>
+        <p class="large-font">
             When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, 
             he had no idea how successful it would become. One of our top-performing recipes of all time, 
             World's Best Lasagna racks up more than 7 million views per year and has ranked among the most 
             popular lasagna recipes on the internet for two decades.
         </p>
 
-        <p>
+        <p class="large-font">
             Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed 
             ingredient list and step-by-step instructions in the recipe below.
         </p>
 
         <h2>Ingredients</h2>
 
-        <ul>
+        <ul class="large-font">
             <li>Meat</li>
             <li>Onion and garlic</li>
             <li>Tomato products</li>
@@ -40,7 +40,7 @@
 
         <h2>Steps</h2>
 
-        <ol>
+        <ol class="large-font">
             <li>Make the meat sauce.</li>
             <li>Cook the noodles.</li>
             <li>Make the ricotta mixture.</li>
