Add style.css to all html files for consiceness

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="hamburger.css">
+        <link rel="stylesheet" href="../style.css">
         <title>Hamburger</title>
     </head>
 
@@ -25,7 +26,7 @@
 
         <h2>Ingredients</h2>
 
-        <ul class="large-font">
+        <ul class="large-font left-side">
             <li>1 ½ pounds lean ground beef</li>
             <li>½ onion, finely chopped</li>
             <li>½ cup shredded Colby Jack or Cheddar cheese</li>
