--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="lasagna.css">
+        <link rel="stylesheet" href="../style.css">
         <title>Lasagna</title>
     </head>
 
@@ -27,7 +28,7 @@
 
         <h2>Ingredients</h2>
 
-        <ul class="large-font">
+        <ul class="large-font left-side">
             <li>Meat</li>
             <li>Onion and garlic</li>
             <li>Tomato products</li>
