--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="pizza.css">
+        <link rel="stylesheet" href="../style.css">
         <title>Pizza</title>
     </head>
 
@@ -14,7 +15,7 @@
 
         <h2>Description</h2>
 
-        <p class="large-font">
+        <p class="large-font left-side">
             Pizza on the grill is a fantastic way to make pizza at home. The heat of a hot grill is a perfect match 
             for a professional pizza oven. Learn the tricks for making and grilling pizza from scratch with this 
             recipe. Feel free to use your favorite toppings, but keep in mind not to overload the pizza.
@@ -29,7 +30,7 @@
 
         <h3>Pizza Dough</h3>
 
-        <ul class="large-font">
+        <ul class="large-font left-side">
             <li>1 cup warm water (110 degrees F/45 degrees C)</li>
             <li>1 (.25 ounce) package active dry yeast</li>
             <li>1 pinch white sugar</li>
@@ -42,13 +43,13 @@
 
         <h3>Garlic Oil</h3>
 
-        <ul class="large-font">
+        <ul class="large-font left-side">
             <li>½ cup olive oil</li>
             <li>1 teaspoon minced garlic</li>
         </ul>
 
         <h3>Pizza Toppings</h3>
-        <ul class="large-font">
+        <ul class="large-font left-side">
             <li>¼ cup tomato sauce, divided</li>
             <li>1 cup chopped tomatoes, divided</li>
             <li>¼ cup sliced black olives, divided</li>
