--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/pizza.html">Pizza</a></li>
-            <li><a href="./recipes/hamburger.html">Hamburger</a></li>
+        <ul class="main-list">
+            <li class="homepage-item"><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li class="homepage-item"><a href="./recipes/pizza.html">Pizza</a></li>
+            <li class="homepage-item"><a href="./recipes/hamburger.html">Hamburger</a></li>
         </ul>
     </body>
 </html>
